- error management (simple toast to user)  - minor ui polishing

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -11,6 +11,8 @@
         android:id="@+id/result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -33,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Date From"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/dateTo"
         app:layout_constraintEnd_toStartOf="@+id/dateFromValue"
         app:layout_constraintHorizontal_bias="0.559"
@@ -45,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Date To"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toStartOf="@+id/dateToValue"
         app:layout_constraintHorizontal_bias="0.563"
